editor/javascript/contextParser.js
contextParser = (function(){
  /* Generated by PEG.js 0.6.1 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "Abstract": parse_Abstract,
        "AnyNumber": parse_AnyNumber,
        "AnyWord": parse_AnyWord,
        "Attribute": parse_Attribute,
        "Between": parse_Between,
        "ClassSentence": parse_ClassSentence,
        "Containment": parse_Containment,
        "Cursor": parse_Cursor,
        "Definition": parse_Definition,
        "EntityName": parse_EntityName,
        "EnumerationSentence": parse_EnumerationSentence,
        "EnumerationValues": parse_EnumerationValues,
        "Exact": parse_Exact,
        "Extends": parse_Extends,
        "Feature": parse_Feature,
        "Features": parse_Features,
        "LaxSentence": parse_LaxSentence,
        "LongName": parse_LongName,
        "Multiplicity": parse_Multiplicity,
        "Name": parse_Name,
        "Number": parse_Number,
        "Obligatory": parse_Obligatory,
        "Optional": parse_Optional,
        "Primitive": parse_Primitive,
        "QName": parse_QName,
        "Reference": parse_Reference,
        "Sentence": parse_Sentence,
        "Sentences": parse_Sentences,
        "UnlimitedFrom": parse_UnlimitedFrom,
        "WordOrCursor": parse_WordOrCursor,
        "_": parse__,
        "__": parse___
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "Definition";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_Definition() {
        var cacheKey = 'Definition@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result1 = parse_Sentences();
        var result0 = result1 !== null
          ? (function(s) {var p=[];
          	for (var i=0; i<primitives.length; i++)
          		p.push({"_class": "Datatype", "name": primitives[i]});
          	s = s.concat(p)
          	if (cursor !== undefined) s.push(cursor);
          	return s})(result1)
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Sentences() {
        var cacheKey = 'Sentences@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result3 = parse__();
        if (result3 !== null) {
          var result4 = parse_Sentence();
          if (result4 !== null) {
            var result5 = parse__();
            if (result5 !== null) {
              var result2 = [result3, result4, result5];
            } else {
              var result2 = null;
              pos = savedPos0;
            }
          } else {
            var result2 = null;
            pos = savedPos0;
          }
        } else {
          var result2 = null;
          pos = savedPos0;
        }
        var result1 = result2 !== null
          ? (function(s) {return s})(result2[1])
          : null;
        if (result1 !== null) {
          var result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            var savedPos0 = pos;
            var result3 = parse__();
            if (result3 !== null) {
              var result4 = parse_Sentence();
              if (result4 !== null) {
                var result5 = parse__();
                if (result5 !== null) {
                  var result2 = [result3, result4, result5];
                } else {
                  var result2 = null;
                  pos = savedPos0;
                }
              } else {
                var result2 = null;
                pos = savedPos0;
              }
            } else {
              var result2 = null;
              pos = savedPos0;
            }
            var result1 = result2 !== null
              ? (function(s) {return s})(result2[1])
              : null;
          }
        } else {
          var result0 = null;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Sentence() {
        var cacheKey = 'Sentence@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result3 = parse_EnumerationSentence();
        if (result3 !== null) {
          var result0 = result3;
        } else {
          var result2 = parse_ClassSentence();
          if (result2 !== null) {
            var result0 = result2;
          } else {
            var result1 = parse_LaxSentence();
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_LaxSentence() {
        var cacheKey = 'LaxSentence@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = (function() {return laxParsing})() ? '' : null;
        if (result2 !== null) {
          var result3 = parse_QName();
          if (result3 !== null) {
            var result4 = [];
            var savedPos1 = pos;
            var result8 = parse___();
            if (result8 !== null) {
              var result9 = parse_WordOrCursor();
              if (result9 !== null) {
                var result7 = [result8, result9];
              } else {
                var result7 = null;
                pos = savedPos1;
              }
            } else {
              var result7 = null;
              pos = savedPos1;
            }
            while (result7 !== null) {
              result4.push(result7);
              var savedPos1 = pos;
              var result8 = parse___();
              if (result8 !== null) {
                var result9 = parse_WordOrCursor();
                if (result9 !== null) {
                  var result7 = [result8, result9];
                } else {
                  var result7 = null;
                  pos = savedPos1;
                }
              } else {
                var result7 = null;
                pos = savedPos1;
              }
            }
            if (result4 !== null) {
              if (input.substr(pos, 1) === ".") {
                var result6 = ".";
                pos += 1;
              } else {
                var result6 = null;
                if (reportMatchFailures) {
                  matchFailed("\".\"");
                }
              }
              var result5 = result6 !== null ? result6 : '';
              if (result5 !== null) {
                var result1 = [result2, result3, result4, result5];
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(c) {return {"_class" : "Class", "name" : c}})(result1[1])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_WordOrCursor() {
        var cacheKey = 'WordOrCursor@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result2 = parse_Cursor();
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result1 = parse_AnyWord();
          if (result1 !== null) {
            var result0 = result1;
          } else {
            var result0 = null;;
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Cursor() {
        var cacheKey = 'Cursor@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = (function() {return failOnCursor})() ? null : '';
        if (result2 !== null) {
          var result5 = parse_QName();
          var result3 = result5 !== null ? result5 : '';
          if (result3 !== null) {
            if (input.substr(pos, 1) === "#") {
              var result4 = "#";
              pos += 1;
            } else {
              var result4 = null;
              if (reportMatchFailures) {
                matchFailed("\"#\"");
              }
            }
            if (result4 !== null) {
              var result1 = [result2, result3, result4];
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(f) {cursor = {"_cursor": f}})(result1[1])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_AnyWord() {
        var cacheKey = 'AnyWord@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var savedReportMatchFailuresVar0 = reportMatchFailures;
        reportMatchFailures = false;
        if (input.substr(pos, 1) === ".") {
          var result7 = ".";
          pos += 1;
        } else {
          var result7 = null;
          if (reportMatchFailures) {
            matchFailed("\".\"");
          }
        }
        if (result7 !== null) {
          var result4 = result7;
        } else {
          var result6 = parse___();
          if (result6 !== null) {
            var result4 = result6;
          } else {
            if (input.substr(pos, 1) === "#") {
              var result5 = "#";
              pos += 1;
            } else {
              var result5 = null;
              if (reportMatchFailures) {
                matchFailed("\"#\"");
              }
            }
            if (result5 !== null) {
              var result4 = result5;
            } else {
              var result4 = null;;
            };
          };
        }
        reportMatchFailures = savedReportMatchFailuresVar0;
        if (result4 === null) {
          var result2 = '';
        } else {
          var result2 = null;
          pos = savedPos1;
        }
        if (result2 !== null) {
          if (input.length > pos) {
            var result3 = input.charAt(pos);
            pos++;
          } else {
            var result3 = null;
            if (reportMatchFailures) {
              matchFailed('any character');
            }
          }
          if (result3 !== null) {
            var result1 = [result2, result3];
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        if (result1 !== null) {
          var result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            var savedPos0 = pos;
            var savedPos1 = pos;
            var savedReportMatchFailuresVar0 = reportMatchFailures;
            reportMatchFailures = false;
            if (input.substr(pos, 1) === ".") {
              var result7 = ".";
              pos += 1;
            } else {
              var result7 = null;
              if (reportMatchFailures) {
                matchFailed("\".\"");
              }
            }
            if (result7 !== null) {
              var result4 = result7;
            } else {
              var result6 = parse___();
              if (result6 !== null) {
                var result4 = result6;
              } else {
                if (input.substr(pos, 1) === "#") {
                  var result5 = "#";
                  pos += 1;
                } else {
                  var result5 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"#\"");
                  }
                }
                if (result5 !== null) {
                  var result4 = result5;
                } else {
                  var result4 = null;;
                };
              };
            }
            reportMatchFailures = savedReportMatchFailuresVar0;
            if (result4 === null) {
              var result2 = '';
            } else {
              var result2 = null;
              pos = savedPos1;
            }
            if (result2 !== null) {
              if (input.length > pos) {
                var result3 = input.charAt(pos);
                pos++;
              } else {
                var result3 = null;
                if (reportMatchFailures) {
                  matchFailed('any character');
                }
              }
              if (result3 !== null) {
                var result1 = [result2, result3];
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          }
        } else {
          var result0 = null;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_EnumerationSentence() {
        var cacheKey = 'EnumerationSentence@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = parse_QName();
        if (result2 !== null) {
          var result3 = parse___();
          if (result3 !== null) {
            if (input.substr(pos, 14) === "is enumeration") {
              var result4 = "is enumeration";
              pos += 14;
            } else {
              var result4 = null;
              if (reportMatchFailures) {
                matchFailed("\"is enumeration\"");
              }
            }
            if (result4 !== null) {
              var result7 = parse_EnumerationValues();
              var result5 = result7 !== null ? result7 : '';
              if (result5 !== null) {
                if (input.substr(pos, 1) === ".") {
                  var result6 = ".";
                  pos += 1;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\".\"");
                  }
                }
                if (result6 !== null) {
                  var result1 = [result2, result3, result4, result5, result6];
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(c, e) {s = {"_class": "Enum", "name": c};
          		if (e) s["literals"] = e;
          		return s;})(result1[0], result1[3])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_EnumerationValues() {
        var cacheKey = 'EnumerationValues@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = parse___();
        if (result2 !== null) {
          if (input.substr(pos, 4) === "with") {
            var result3 = "with";
            pos += 4;
          } else {
            var result3 = null;
            if (reportMatchFailures) {
              matchFailed("\"with\"");
            }
          }
          if (result3 !== null) {
            var result4 = parse___();
            if (result4 !== null) {
              if (input.substr(pos, 6) === "values") {
                var result5 = "values";
                pos += 6;
              } else {
                var result5 = null;
                if (reportMatchFailures) {
                  matchFailed("\"values\"");
                }
              }
              if (result5 !== null) {
                var result6 = parse___();
                if (result6 !== null) {
                  var result7 = parse_QName();
                  if (result7 !== null) {
                    var result8 = [];
                    var savedPos1 = pos;
                    var result11 = parse__();
                    if (result11 !== null) {
                      if (input.substr(pos, 1) === ",") {
                        var result12 = ",";
                        pos += 1;
                      } else {
                        var result12 = null;
                        if (reportMatchFailures) {
                          matchFailed("\",\"");
                        }
                      }
                      if (result12 !== null) {
                        var result13 = parse__();
                        if (result13 !== null) {
                          var result14 = parse_QName();
                          if (result14 !== null) {
                            var result10 = [result11, result12, result13, result14];
                          } else {
                            var result10 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result10 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result10 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result10 = null;
                      pos = savedPos1;
                    }
                    var result9 = result10 !== null
                      ? (function(q) {return q})(result10[3])
                      : null;
                    while (result9 !== null) {
                      result8.push(result9);
                      var savedPos1 = pos;
                      var result11 = parse__();
                      if (result11 !== null) {
                        if (input.substr(pos, 1) === ",") {
                          var result12 = ",";
                          pos += 1;
                        } else {
                          var result12 = null;
                          if (reportMatchFailures) {
                            matchFailed("\",\"");
                          }
                        }
                        if (result12 !== null) {
                          var result13 = parse__();
                          if (result13 !== null) {
                            var result14 = parse_QName();
                            if (result14 !== null) {
                              var result10 = [result11, result12, result13, result14];
                            } else {
                              var result10 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result10 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result10 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result10 = null;
                        pos = savedPos1;
                      }
                      var result9 = result10 !== null
                        ? (function(q) {return q})(result10[3])
                        : null;
                    }
                    if (result8 !== null) {
                      var result1 = [result2, result3, result4, result5, result6, result7, result8];
                    } else {
                      var result1 = null;
                      pos = savedPos0;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos0;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(f, l) {return [f].concat(l);})(result1[5], result1[6])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_ClassSentence() {
        var cacheKey = 'ClassSentence@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = parse_QName();
        if (result2 !== null) {
          var result9 = parse_Abstract();
          var result3 = result9 !== null ? result9 : '';
          if (result3 !== null) {
            var result8 = parse_Extends();
            var result4 = result8 !== null ? result8 : '';
            if (result4 !== null) {
              var result7 = parse_Features();
              var result5 = result7 !== null ? result7 : '';
              if (result5 !== null) {
                if (input.substr(pos, 1) === ".") {
                  var result6 = ".";
                  pos += 1;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\".\"");
                  }
                }
                if (result6 !== null) {
                  var result1 = [result2, result3, result4, result5, result6];
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(c, a, e, f) {var s={"_class" : "Class", "name" : c};
          	if (f) s["features"] = f;
          	if (e) s["superTypes"] = e;
          	if (a) s["abstract"] = true;
          	return s})(result1[0], result1[1], result1[2], result1[3])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Abstract() {
        var cacheKey = 'Abstract@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result1 = parse___();
        if (result1 !== null) {
          if (input.substr(pos, 11) === "is abstract") {
            var result2 = "is abstract";
            pos += 11;
          } else {
            var result2 = null;
            if (reportMatchFailures) {
              matchFailed("\"is abstract\"");
            }
          }
          if (result2 !== null) {
            var result0 = [result1, result2];
          } else {
            var result0 = null;
            pos = savedPos0;
          }
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Extends() {
        var cacheKey = 'Extends@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = parse___();
        if (result2 !== null) {
          if (input.substr(pos, 7) === "extends") {
            var result3 = "extends";
            pos += 7;
          } else {
            var result3 = null;
            if (reportMatchFailures) {
              matchFailed("\"extends\"");
            }
          }
          if (result3 !== null) {
            var result4 = parse___();
            if (result4 !== null) {
              var result5 = parse_EntityName();
              if (result5 !== null) {
                var result1 = [result2, result3, result4, result5];
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(e) {return e})(result1[3])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Features() {
        var cacheKey = 'Features@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result2 = parse___();
        if (result2 !== null) {
          var result3 = parse_Feature();
          if (result3 !== null) {
            var result4 = [];
            var savedPos1 = pos;
            var result7 = parse__();
            if (result7 !== null) {
              if (input.substr(pos, 1) === ",") {
                var result8 = ",";
                pos += 1;
              } else {
                var result8 = null;
                if (reportMatchFailures) {
                  matchFailed("\",\"");
                }
              }
              if (result8 !== null) {
                var result9 = parse__();
                if (result9 !== null) {
                  var result10 = parse_Feature();
                  if (result10 !== null) {
                    var result6 = [result7, result8, result9, result10];
                  } else {
                    var result6 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result6 = null;
                  pos = savedPos1;
                }
              } else {
                var result6 = null;
                pos = savedPos1;
              }
            } else {
              var result6 = null;
              pos = savedPos1;
            }
            var result5 = result6 !== null
              ? (function(f3) {return f3})(result6[3])
              : null;
            while (result5 !== null) {
              result4.push(result5);
              var savedPos1 = pos;
              var result7 = parse__();
              if (result7 !== null) {
                if (input.substr(pos, 1) === ",") {
                  var result8 = ",";
                  pos += 1;
                } else {
                  var result8 = null;
                  if (reportMatchFailures) {
                    matchFailed("\",\"");
                  }
                }
                if (result8 !== null) {
                  var result9 = parse__();
                  if (result9 !== null) {
                    var result10 = parse_Feature();
                    if (result10 !== null) {
                      var result6 = [result7, result8, result9, result10];
                    } else {
                      var result6 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result6 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result6 = null;
                  pos = savedPos1;
                }
              } else {
                var result6 = null;
                pos = savedPos1;
              }
              var result5 = result6 !== null
                ? (function(f3) {return f3})(result6[3])
                : null;
            }
            if (result4 !== null) {
              var result1 = [result2, result3, result4];
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(f1, f2) {if (f2.length != 0) {
          		var r=[f1];
          		for (var i=0; i<f2.length; i++)
          			{r.push(f2[i])};
          	} else {
          		var r=f1;
          	}
          	return r})(result1[1], result1[2])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Feature() {
        var cacheKey = 'Feature@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var result3 = parse_Attribute();
        if (result3 !== null) {
          var result0 = result3;
        } else {
          var result2 = parse_Containment();
          if (result2 !== null) {
            var result0 = result2;
          } else {
            var result1 = parse_Reference();
            if (result1 !== null) {
              var result0 = result1;
            } else {
              var result0 = null;;
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Attribute() {
        var cacheKey = 'Attribute@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 3) === "has") {
          var result2 = "has";
          pos += 3;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
            matchFailed("\"has\"");
          }
        }
        if (result2 !== null) {
          var result3 = parse_Multiplicity();
          if (result3 !== null) {
            var result4 = parse_QName();
            if (result4 !== null) {
              var result5 = parse___();
              if (result5 !== null) {
                if (input.substr(pos, 2) === "as") {
                  var result6 = "as";
                  pos += 2;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"as\"");
                  }
                }
                if (result6 !== null) {
                  var result7 = parse___();
                  if (result7 !== null) {
                    var result8 = parse_Primitive();
                    if (result8 !== null) {
                      var result1 = [result2, result3, result4, result5, result6, result7, result8];
                    } else {
                      var result1 = null;
                      pos = savedPos0;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos0;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(feature, n, p) {if ($.inArray(p, primitives)) {primitives.push(p);};
          	feature["kind"] = "attribute";
          	feature["name"] = n;
          	feature["type"] = p;
          	return feature})(result1[1], result1[2], result1[6])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Containment() {
        var cacheKey = 'Containment@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 8) === "contains") {
          var result2 = "contains";
          pos += 8;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
            matchFailed("\"contains\"");
          }
        }
        if (result2 !== null) {
          var result3 = parse_Multiplicity();
          if (result3 !== null) {
            var result4 = parse_QName();
            if (result4 !== null) {
              var result5 = parse___();
              if (result5 !== null) {
                if (input.substr(pos, 2) === "as") {
                  var result6 = "as";
                  pos += 2;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"as\"");
                  }
                }
                if (result6 !== null) {
                  var result7 = parse___();
                  if (result7 !== null) {
                    var result8 = parse_EntityName();
                    if (result8 !== null) {
                      var result1 = [result2, result3, result4, result5, result6, result7, result8];
                    } else {
                      var result1 = null;
                      pos = savedPos0;
                    }
                  } else {
                    var result1 = null;
                    pos = savedPos0;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(feature, n, e) {feature["kind"] = "containment";
          	feature["name"] = n;
          	feature["type"] = e;
          	return feature})(result1[1], result1[2], result1[6])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_Reference() {
        var cacheKey = 'Reference@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 3) === "has") {
          var result2 = "has";
          pos += 3;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
